updated profile height to prevent layout bugs

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1998,7 +1998,7 @@ a.instagram:hover {
 
     /*overflow: hidden;*/
 
-    min-height: 400px;
+    min-height: 420px;
 }
 
 .profile-padding {
